# Xonix-duplicate

./: .gitignore  CMakeLists.txt  README,txt  README.md  README.txt  main.cpp
cmake/: SFML.cmake
include/: AreaCloser.h  Board.h  Enemy.h  Exception.h  FileParser.h  FloodFill.h  GameController.h  GridManager.h  Hud.h  IGameState.h  InGameState.h  LoseState.h  Macros.h  MovingObject.h  Object.h  Player.h  Tile.h  Trail.h  WelcomeState.h  WinState.h  WindowManager.h
resources/: CMakeLists.txt  game_data.txt
src/: AreaCloser.cpp  Board.cpp  Enemy.cpp  FileParser.cpp  FloodFill.cpp  GameController.cpp  GridManager.cpp  Hud.cpp  InGameState.cpp  LoseState.cpp  MovingObject.cpp  Object.cpp  Player.cpp  Tile.cpp  Trail.cpp  WelcomeState.cpp  WinState.cpp  WindowManager.cpp  main.cpp
